탭바 이미지 등록완료

--- a/DoitDoitChu/Base.lproj/Main.storyboard
+++ b/DoitDoitChu/Base.lproj/Main.storyboard
@@ -179,8 +179,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" systemColor="systemOrangeColor"/>
-                        <tabBarAppearance key="standardAppearance"/>
+                        <color key="tintColor" name="Orange 1000"/>
+                        <color key="selectedImageTintColor" name="Orange 1000"/>
+                        <tabBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="Orange 1000"/>
+                        </tabBarAppearance>
                     </tabBar>
                     <connections>
                         <segue destination="cmF-fD-RAj" kind="relationship" relationship="viewControllers" id="bJg-i3-BBQ"/>
@@ -224,11 +227,11 @@
             </objects>
             <point key="canvasLocation" x="2304.5801526717555" y="665.49295774647885"/>
         </scene>
-        <!--개인투두-->
+        <!--Navigation Controller-->
         <scene sceneID="MwQ-xp-9Dn">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cmF-fD-RAj" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="개인투두" image="CheckSquare" id="0Dj-Rd-FzO"/>
+                    <tabBarItem key="tabBarItem" title="" image="TabSoloTodo" id="0Dj-Rd-FzO"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2yB-As-Ip4">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -245,11 +248,11 @@
             </objects>
             <point key="canvasLocation" x="1377.8625954198474" y="-835.21126760563379"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="273-py-lbW">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aUq-6V-B7u" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="fpo-z6-bf1"/>
+                    <tabBarItem key="tabBarItem" title="" image="TabTeam" id="fpo-z6-bf1"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="131-LD-O3U">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -264,11 +267,11 @@
             </objects>
             <point key="canvasLocation" x="1377.8625954198474" y="-71.126760563380287"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="ddS-7H-jhB">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sAd-eg-v7s" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="0c4-Kw-4OM"/>
+                    <tabBarItem key="tabBarItem" title="" image="TabHistory" id="0c4-Kw-4OM"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="h30-f8-y9P">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -287,14 +290,14 @@
     <resources>
         <image name="CheckSquare" width="22" height="22"/>
         <image name="Group 11" width="73" height="21"/>
+        <image name="TabHistory" width="45" height="48"/>
+        <image name="TabSoloTodo" width="45" height="48"/>
+        <image name="TabTeam" width="35" height="48"/>
         <namedColor name="Orange 1000">
             <color red="1" green="0.49799999594688416" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
