--- a/DoitDoitChu/Base.lproj/LaunchScreen.storyboard
+++ b/DoitDoitChu/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Group 6" translatesAutoresizingMaskIntoConstraints="NO" id="yvl-rp-GI9">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainLogo" translatesAutoresizingMaskIntoConstraints="NO" id="yvl-rp-GI9">
                                 <rect key="frame" x="41" y="335" width="310" height="182"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="yvl-rp-GI9" secondAttribute="bottom" constant="301" id="8wE-ul-kJt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yvl-rp-GI9" secondAttribute="trailing" constant="42" id="CJM-tM-9NX"/>
+                            <constraint firstItem="yvl-rp-GI9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="276" id="FUa-a6-AkA"/>
+                            <constraint firstItem="yvl-rp-GI9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="41" id="s4M-ap-Wfx"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -31,7 +36,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Group 6" width="600" height="400"/>
+        <image name="MainLogo" width="274" height="38"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
